tests/diff/diff.exp
Error: intersection.js:9
  9: ((any: {c: C} & {b: B}): $Diff<{a: A, b: B}, {b: B}>); // Error
            ^^^^^^^^^^^^^^^ intersection. This type is incompatible with
  9: ((any: {c: C} & {b: B}): $Diff<{a: A, b: B}, {b: B}>); // Error
                              ^^^^^^^^^^^^^^^^^^^^^^^^^^^ object type
  Member 1:
    9: ((any: {c: C} & {b: B}): $Diff<{a: A, b: B}, {b: B}>); // Error
              ^^^^^^ object type
  Error:
    9: ((any: {c: C} & {b: B}): $Diff<{a: A, b: B}, {b: B}>); // Error
              ^^^^^^ object type. This type is incompatible with
    9: ((any: {c: C} & {b: B}): $Diff<{a: A, b: B}, {b: B}>); // Error
                                ^^^^^^^^^^^^^^^^^^^^^^^^^^^ object type
    Property `a` is incompatible:
        9: ((any: {c: C} & {b: B}): $Diff<{a: A, b: B}, {b: B}>); // Error
                                    ^^^^^^^^^^^^^^^^^^^^^^^^^^^ property `a`. Property not found in
        9: ((any: {c: C} & {b: B}): $Diff<{a: A, b: B}, {b: B}>); // Error
                  ^^^^^^ object type
  Member 2:
    9: ((any: {c: C} & {b: B}): $Diff<{a: A, b: B}, {b: B}>); // Error
                       ^^^^^^ object type
  Error:
    9: ((any: {c: C} & {b: B}): $Diff<{a: A, b: B}, {b: B}>); // Error
                       ^^^^^^ object type. This type is incompatible with
    9: ((any: {c: C} & {b: B}): $Diff<{a: A, b: B}, {b: B}>); // Error
                                ^^^^^^^^^^^^^^^^^^^^^^^^^^^ object type
    Property `a` is incompatible:
        9: ((any: {c: C} & {b: B}): $Diff<{a: A, b: B}, {b: B}>); // Error
                                    ^^^^^^^^^^^^^^^^^^^^^^^^^^^ property `a`. Property not found in
        9: ((any: {c: C} & {b: B}): $Diff<{a: A, b: B}, {b: B}>); // Error
                           ^^^^^^ object type

Error ----------------------------------------------------- intersection.js:12:8

Error: intersection.js:12
 12: ((any: {b: B}): $Diff<{a: A} & {b: B}, {b: B}>); // Error
            ^^^^^^ Cannot cast `any` to `$Diff` because property `a` is missing in object type [1] but exists in object type [2].
  References:
   12: ((any: {b: B}): $Diff<{a: A} & {b: B}, {b: B}>); // Error
              ^^^^^^ [1]: object type
   12: ((any: {b: B}): $Diff<{a: A} & {b: B}, {b: B}>); // Error
                             ^^^^^^^^^^^^^^^ [2]: object type

Error ----------------------------------------------------- intersection.js:14:8

Error: intersection.js:14
 14: ((any: {b: B}): $Diff<{a: A, b: B, c: C}, {b: B} & {c: C}>); // Error
            ^^^^^^ Cannot cast `any` to `$Diff` because property `a` is missing in object type [1] but exists in object type [2].
  References:
   14: ((any: {b: B}): $Diff<{a: A, b: B, c: C}, {b: B} & {c: C}>); // Error
              ^^^^^^ [1]: object type
   14: ((any: {b: B}): $Diff<{a: A, b: B, c: C}, {b: B} & {c: C}>); // Error
                             ^^^^^^^^^^^^^^^^^^ [2]: object type

Error ------------------------------------------------------------ lower.js:21:4

Error: lower.js:21
 21: (y.age: number); // Error -- could be void
        ^^^ Cannot get `y.age` because property `age` is missing in `Person` [1].
  References:
   18: declare var y: PersonWithoutAgeActual;
                      ^^^^^^^^^^^^^^^^^^^^^^ [1]: `Person`

Error ------------------------------------------------------------ lower.js:22:2

Error: lower.js:22
 22: (y.name: number); // Error -- should be string
      ^^^^^^ Cannot cast `y.name` to number because string [1] is incompatible with number [2].
  References:
    4:   name: string,
               ^^^^^^ [1]: string
   22: (y.name: number); // Error -- should be string
                ^^^^^^ [2]: number

Error ------------------------------------------------------------ lower.js:23:3

Error: lower.js:23
 23: y.bla; // Error -- key not found.
       ^^^ Cannot get `y.bla` because property `bla` is missing in `Person` [1].
  References:
   18: declare var y: PersonWithoutAgeActual;
                      ^^^^^^^^^^^^^^^^^^^^^^ [1]: `Person`

Error --------------------------------------------------------- undefined.js:8:8

Error: undefined.js:8
  8: ((any: {b: B}): $Diff<{a: A, b: B}, {b: B}>); // Error
            ^^^^^^ Cannot cast `any` to `$Diff` because property `a` is missing in object type [1] but exists in object type [2].
  References:
    8: ((any: {b: B}): $Diff<{a: A, b: B}, {b: B}>); // Error
              ^^^^^^ [1]: object type
    8: ((any: {b: B}): $Diff<{a: A, b: B}, {b: B}>); // Error
                             ^^^^^^^^^^^^ [2]: object type

Error ------------------------------------------------------- undefined.js:10:12

Error: undefined.js:10
 10: ((any: {a: void, b: B}): $Diff<{a: A, b: B}, {b: B}>); // Error
                ^^^^ Cannot cast `any` to `$Diff` because in property `a`, undefined [1] is incompatible with `A` [2].
  References:
   10: ((any: {a: void, b: B}): $Diff<{a: A, b: B}, {b: B}>); // Error
                  ^^^^ [1]: undefined
   10: ((any: {a: void, b: B}): $Diff<{a: A, b: B}, {b: B}>); // Error
                                          ^ [2]: `A`


Found 8 errors
